[HotFix] NoGuavaJava21 causing invalid code since v2.28.0