@@ -28,25 +28,27 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
     @Override
     public void defaults(RecipeSpec spec) {
         spec
-          .recipe(new NoGuavaImmutableListOf())
-          .parser(JavaParser.fromJavaVersion().classpath("guava"));
+            .recipe(new NoGuavaImmutableListOf())
+            .parser(JavaParser.fromJavaVersion().classpath("guava"));
     }
 
     @Test
     void doNotChangeReturnsImmutableList() {
         rewriteRun(
-          //language=java
-          java(
-            """
-              import com.google.common.collect.ImmutableList;
-              
-              class Test {
-                  ImmutableList<String> getList() {
-                      return ImmutableList.of();
-                  }
-              }
-              """
-          )
+            version(
+                //language=java
+                java(
+                    """
+                      import com.google.common.collect.ImmutableList;
+
+                      class Test {
+                          ImmutableList<String> getList() {
+                              return ImmutableList.of();
+                          }
+                      }
+                      """
+                )
+                ,9)
         );
 
     }
@@ -54,40 +56,44 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
     @Test
     void doNotChangeFieldAssignmentToImmutableList() {
         rewriteRun(
-          //language=java
-          java(
-            """
-              import com.google.common.collect.ImmutableList;
-              
-              class Test {
-                  ImmutableList<String> m;
-              
-                  {
-                      this.m = ImmutableList.of();
-                  }
-              }
-              """
-          )
+            version(
+                //language=java
+                java(
+                    """
+                      import com.google.common.collect.ImmutableList;
+
+                      class Test {
+                          ImmutableList<String> m;
+
+                          {
+                              this.m = ImmutableList.of();
+                          }
+                      }
+                      """
+                )
+                ,9)
         );
     }
 
     @Test
     void doNotChangeAssignsToImmutableList() {
         rewriteRun(
-          //language=java
-          java(
-            """
-              import com.google.common.collect.ImmutableList;
-              
-              class Test {
-                  ImmutableList<String> m;
-              
-                  void init() {
-                      m = ImmutableList.of();
-                  }
-              }
-              """
-          )
+            version(
+                //language=java
+                java(
+                    """
+                      import com.google.common.collect.ImmutableList;
+
+                      class Test {
+                          ImmutableList<String> m;
+
+                          void init() {
+                              m = ImmutableList.of();
+                          }
+                      }
+                      """
+                )
+                ,9)
         );
     }
 
@@ -95,181 +101,185 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
     void doNotChangeNewClass() {
         //language=java
         rewriteRun(
-          java(
-            """
-              import com.google.common.collect.ImmutableList;
-              
-              public class A {
-                  ImmutableList<String> immutableList;
-                  public A(ImmutableList<String> immutableList) {
-                      this.immutableList = immutableList;
+            java(
+                """
+                  import com.google.common.collect.ImmutableList;
+
+                  public class A {
+                      ImmutableList<String> immutableList;
+                      public A(ImmutableList<String> immutableList) {
+                          this.immutableList = immutableList;
+                      }
                   }
-              }
-              """
-          ),
-          //language=java
-          java(
-            """
-              import com.google.common.collect.ImmutableList;
-              
-              class Test {
-                  A a = new A(ImmutableList.of());
-              }
-              """)
+                  """
+            ),
+            version(
+                //language=java
+                java(
+                    """
+                      import com.google.common.collect.ImmutableList;
+
+                      class Test {
+                          A a = new A(ImmutableList.of());
+                      }
+                      """)
+                ,9)
         );
     }
 
     @Test
     void doNotChangeMethodInvocation() {
         rewriteRun(
-          spec -> spec.parser(
-            JavaParser.fromJavaVersion()
-              .classpath("guava")
-              .dependsOn(
+            spec -> spec.parser(
+                JavaParser.fromJavaVersion()
+                    .classpath("guava")
+                    .dependsOn(
+                        //language=java
+                        """
+                          import com.google.common.collect.ImmutableList;
+
+                          public class A {
+                              ImmutableList<String> immutableList;
+                              public void method(ImmutableList<String> immutableList) {
+                                  this.immutableList = immutableList;
+                              }
+                          }
+                          """
+                    )
+            ),
+            version(
                 //language=java
-                """
-                  import com.google.common.collect.ImmutableList;
-                  
-                  public class A {
-                      ImmutableList<String> immutableList;
-                      public void method(ImmutableList<String> immutableList) {
-                          this.immutableList = immutableList;
+                java(
+                    """
+                      import com.google.common.collect.ImmutableList;
+
+                      class Test {
+                          void method() {
+                              A a = new A();
+                              a.method(ImmutableList.of());
+                          }
                       }
-                  }
-                  """
-              )
-          ),
-          //language=java
-          java(
-            """
-              import com.google.common.collect.ImmutableList;
-              
-              class Test {
-                  void method() {
-                      A a = new A();
-                      a.method(ImmutableList.of());
-                  }
-              }
-              """
-          )
+                      """
+                )
+                ,9)
         );
     }
 
     @Test
     void replaceArguments() {
         rewriteRun(
-          version(
-            //language=java
-            java(
-              """
-                import java.util.List;
-                import com.google.common.collect.ImmutableList;
-                
-                class Test {
-                    List<String> m = ImmutableList.of("A", "B", "C", "D");
-                }
-                """,
-              """
-                import java.util.List;
-                
-                class Test {
-                    List<String> m = List.of("A", "B", "C", "D");
-                }
-                """
-            ),
-            9
-          )
+            version(
+                //language=java
+                java(
+                    """
+                      import java.util.List;
+                      import com.google.common.collect.ImmutableList;
+
+                      class Test {
+                          List<String> m = ImmutableList.of("A", "B", "C", "D");
+                      }
+                      """,
+                    """
+                      import java.util.List;
+
+                      class Test {
+                          List<String> m = List.of("A", "B", "C", "D");
+                      }
+                      """
+                ),
+                9
+            )
         );
     }
 
     @Test
     void fieldAssignmentToList() {
         rewriteRun(
-          version(
-            //language=java
-            java(
-              """
-                import java.util.List;
-                import com.google.common.collect.ImmutableList;
-                
-                class Test {
-                    List<String> m;
-                    {
-                        this.m = ImmutableList.of();
-                    }
-                }
-                """,
-              """
-                import java.util.List;
-                
-                class Test {
-                    List<String> m;
-                    {
-                        this.m = List.of();
-                    }
-                }
-                """
-            ),
-            9
-          )
+            version(
+                //language=java
+                java(
+                    """
+                      import java.util.List;
+                      import com.google.common.collect.ImmutableList;
+
+                      class Test {
+                          List<String> m;
+                          {
+                              this.m = ImmutableList.of();
+                          }
+                      }
+                      """,
+                    """
+                      import java.util.List;
+
+                      class Test {
+                          List<String> m;
+                          {
+                              this.m = List.of();
+                          }
+                      }
+                      """
+                ),
+                9
+            )
         );
     }
 
     @Test
     void assignmentToList() {
         rewriteRun(
-          version(
-            //language=java
-            java(
-              """
-                import java.util.List;
-                import com.google.common.collect.ImmutableList;
-                
-                class Test {
-                    List<String> m = ImmutableList.of();
-                }
-                """,
-              """
-                import java.util.List;
-                
-                class Test {
-                    List<String> m = List.of();
-                }
-                """
-            ),
-            9
-          )
+            version(
+                //language=java
+                java(
+                    """
+                      import java.util.List;
+                      import com.google.common.collect.ImmutableList;
+
+                      class Test {
+                          List<String> m = ImmutableList.of();
+                      }
+                      """,
+                    """
+                      import java.util.List;
+
+                      class Test {
+                          List<String> m = List.of();
+                      }
+                      """
+                ),
+                9
+            )
         );
     }
 
     @Test
     void returnsList() {
         rewriteRun(
-          version(
-            //language=java
-            java(
-              """
-                import java.util.List;
-                import com.google.common.collect.ImmutableList;
-                
-                class Test {
-                    List<String> list() {
-                        return ImmutableList.of();
-                    }
-                }
-                """,
-              """
-                import java.util.List;
-                
-                class Test {
-                    List<String> list() {
-                        return List.of();
-                    }
-                }
-                """
-            ),
-            9
-          )
+            version(
+                //language=java
+                java(
+                    """
+                      import java.util.List;
+                      import com.google.common.collect.ImmutableList;
+
+                      class Test {
+                          List<String> list() {
+                              return ImmutableList.of();
+                          }
+                      }
+                      """,
+                    """
+                      import java.util.List;
+
+                      class Test {
+                          List<String> list() {
+                              return List.of();
+                          }
+                      }
+                      """
+                ),
+                9
+            )
         );
     }
 
@@ -277,38 +287,38 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
     void newClassWithListArgument() {
         //language=java
         rewriteRun(
-          java(
-            """
-              import java.util.List;
-              
-              public class A {
-                  List<String> list;
-                  public A(List<String> list) {
-                      this.list = list;
-                  }
-              }
-              """
-          ),
-          version(
-            //language=java
             java(
-              """
-                  import com.google.common.collect.ImmutableList;
-                
-                  class Test {
-                      A a = new A(ImmutableList.of());
-                  }
-                """,
-              """
-                  import java.util.List;
-                
-                  class Test {
-                      A a = new A(List.of());
-                  }
                 """
+                  import java.util.List;
+
+                  public class A {
+                      List<String> list;
+                      public A(List<String> list) {
+                          this.list = list;
+                      }
+                  }
+                  """
             ),
-            11
-          )
+            version(
+                //language=java
+                java(
+                    """
+                        import com.google.common.collect.ImmutableList;
+
+                        class Test {
+                            A a = new A(ImmutableList.of());
+                        }
+                      """,
+                    """
+                        import java.util.List;
+
+                        class Test {
+                            A a = new A(List.of());
+                        }
+                      """
+                ),
+                11
+            )
         );
     }
 
@@ -316,44 +326,44 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
     void doChangeMethodInvocationWithSelect() {
         //language=java
         rewriteRun(
-          java(
-            """
-              import java.util.List;
-              
-              public class A {
-                  Object[] list;
-                  public void method(Object[] list ) {
-                      this.list = list;
-                  }
-              }
-              """
-          ),
-          version(
-            //language=java
             java(
-              """
-                import com.google.common.collect.ImmutableList;
-                
-                class Test {
-                    void method() {
-                        A a = new A();
-                        a.method(ImmutableList.of().toArray());
-                    }
-                }
-                """,
-              """
-                import java.util.List;
-                
-                class Test {
-                    void method() {
-                        A a = new A();
-                        a.method(List.of().toArray());
-                    }
-                }
                 """
+                  import java.util.List;
+
+                  public class A {
+                      Object[] list;
+                      public void method(Object[] list ) {
+                          this.list = list;
+                      }
+                  }
+                  """
             ),
-            11
-          )
+            version(
+                //language=java
+                java(
+                    """
+                      import com.google.common.collect.ImmutableList;
+
+                      class Test {
+                          void method() {
+                              A a = new A();
+                              a.method(ImmutableList.of().toArray());
+                          }
+                      }
+                      """,
+                    """
+                      import java.util.List;
+
+                      class Test {
+                          void method() {
+                              A a = new A();
+                              a.method(List.of().toArray());
+                          }
+                      }
+                      """
+                ),
+                11
+            )
         );
     }
 
@@ -361,44 +371,44 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
     void methodInvocationWithListArgument() {
         //language=java
         rewriteRun(
-          java(
-            """
-              import java.util.List;
-              
-              public class A {
-                  List<String> list;
-                  public void method(List<String> list) {
-                      this.list = list;
-                  }
-              }
-              """
-          ),
-          version(
-            //language=java
             java(
-              """
-                import com.google.common.collect.ImmutableList;
-                
-                class Test {
-                    void method() {
-                        A a = new A();
-                        a.method(ImmutableList.of());
-                    }
-                }
-                """,
-              """
-                import java.util.List;
-                
-                class Test {
-                    void method() {
-                        A a = new A();
-                        a.method(List.of());
-                    }
-                }
                 """
+                  import java.util.List;
+
+                  public class A {
+                      List<String> list;
+                      public void method(List<String> list) {
+                          this.list = list;
+                      }
+                  }
+                  """
             ),
-            11
-          )
+            version(
+                //language=java
+                java(
+                    """
+                      import com.google.common.collect.ImmutableList;
+
+                      class Test {
+                          void method() {
+                              A a = new A();
+                              a.method(ImmutableList.of());
+                          }
+                      }
+                      """,
+                    """
+                      import java.util.List;
+
+                      class Test {
+                          void method() {
+                              A a = new A();
+                              a.method(List.of());
+                          }
+                      }
+                      """
+                ),
+                11
+            )
         );
     }
 
@@ -406,31 +416,31 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
     @Test
     void listOfInts() {
         rewriteRun(
-          version(
-            //language=java
-            java(
-              """
-                import java.util.List;
-                import com.google.common.collect.ImmutableList;
-                
-                class Test {
-                    List<Integer> list() {
-                        return ImmutableList.of(1, 2, 3);
-                    }
-                }
-                """,
-              """
-                import java.util.List;
-                
-                class Test {
-                    List<Integer> list() {
-                        return List.of(1, 2, 3);
-                    }
-                }
-                """
-            ),
-            9
-          )
+            version(
+                //language=java
+                java(
+                    """
+                      import java.util.List;
+                      import com.google.common.collect.ImmutableList;
+
+                      class Test {
+                          List<Integer> list() {
+                              return ImmutableList.of(1, 2, 3);
+                          }
+                      }
+                      """,
+                    """
+                      import java.util.List;
+
+                      class Test {
+                          List<Integer> list() {
+                              return List.of(1, 2, 3);
+                          }
+                      }
+                      """
+                ),
+                9
+            )
         );
     }
 
@@ -438,30 +448,30 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
     @Test
     void insideAnonymousArrayInitializer() {
         rewriteRun(
-          version(
-            //language=java
-            java(
-              """
-                import com.google.common.collect.ImmutableList;
-                
-                class A {
-                    Object[] o = new Object[] {
-                            ImmutableList.of(1, 2, 3)
-                    };
-                }
-                """,
-              """
-                import java.util.List;
-                
-                class A {
-                    Object[] o = new Object[] {
-                            List.of(1, 2, 3)
-                    };
-                }
-                """
-            ),
-            9
-          )
+            version(
+                //language=java
+                java(
+                    """
+                      import com.google.common.collect.ImmutableList;
+
+                      class A {
+                          Object[] o = new Object[] {
+                                  ImmutableList.of(1, 2, 3)
+                          };
+                      }
+                      """,
+                    """
+                      import java.util.List;
+
+                      class A {
+                          Object[] o = new Object[] {
+                                  List.of(1, 2, 3)
+                          };
+                      }
+                      """
+                ),
+                9
+            )
         );
     }
 
@@ -469,26 +479,26 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
     @Test
     void assignToMoreGeneralType() {
         rewriteRun(
-          version(
-            //language=java
-            java(
-              """
-                import com.google.common.collect.ImmutableList;
-                
-                class A {
-                    Object o = ImmutableList.of(1, 2, 3);
-                }
-                """,
-              """
-                import java.util.List;
-                
-                class A {
-                    Object o = List.of(1, 2, 3);
-                }
-                """
-            ),
-            11
-          )
+            version(
+                //language=java
+                java(
+                    """
+                      import com.google.common.collect.ImmutableList;
+
+                      class A {
+                          Object o = ImmutableList.of(1, 2, 3);
+                      }
+                      """,
+                    """
+                      import java.util.List;
+
+                      class A {
+                          Object o = List.of(1, 2, 3);
+                      }
+                      """
+                ),
+                11
+            )
         );
     }
 
@@ -497,82 +507,19 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
     void doChangeAssignToImmutableMap() {
         //language=java
         rewriteRun(
-          version(
-            java(
-              """
-                import com.google.common.collect.ImmutableList;
-                import java.util.List;
-                
-                class A {
-                    Object o = List.of(ImmutableList.of(1, 2), ImmutableList.of(2, 3));
-                }
-                """,
-              """
-                import java.util.List;
-                
-                class A {
-                    Object o = List.of(List.of(1, 2), List.of(2, 3));
-                }
-                """
-            ),
-            9
-          )
-        );
-    }
+            version(
+                java(
+                    """
+                      import com.google.common.collect.ImmutableList;
+                      import java.util.List;
 
-    @Test
-    void doChangeNestedListsWithVariableType() {
-        //language=java
-        rewriteRun(
-          version(
-            java(
-              """
-                import com.google.common.collect.ImmutableList;
-                
-                class A {
-                    ImmutableList<ImmutableList<Integer>> o = ImmutableList.of(ImmutableList.of(1, 2), ImmutableList.of(2, 3));
-                }
-                """,
-              """
-                import java.util.List;
-                
-                class A {
-                    List<List<Integer>> o = List.of(List.of(1, 2), List.of(2, 3));
-                }
-                """
-            ),
-            9
-          )
-        );
-    }
-
-    @Test
-    void doChangeAssignFromImmutableListToList() {
-        rewriteRun(
-          version(
-            //language=java
-            java(
-              """
-                import com.google.common.collect.ImmutableList;
-                
-                class A {
-                    void test() {
-                        ImmutableList<Integer> o = ImmutableList.of(1, 2);
-                    }
-                }
-                """,
-              """
-                import java.util.List;
-                
-                class A {
-                    void test() {
-                        List<Integer> o = List.of(1, 2);
-                    }
-                }
-                """
-            ),
-            11
-          )
+                      class A {
+                          Object o = List.of(ImmutableList.of(1, 2), ImmutableList.of(2, 3));
+                      }
+                      """
+                ),
+                9
+            )
         );
     }
 
@@ -580,24 +527,46 @@ class NoGuavaImmutableListOfTest implements RewriteTest {
     @Test
     void doChangeWithStreamOperation() {
         rewriteRun(
+            version(
+                //language=java
+                java(
+                    """
+                      import com.google.common.collect.ImmutableList;
+
+                      class A {
+                          void test() {
+                              final List<Integer> list = ImmutableList.of(1, 2).stream().toList();
+                          }
+                      }
+                      """,
+                    """
+                      import java.util.List;
+
+                      class A {
+                          void test() {
+                              final List<Integer> list = List.of(1, 2).stream().toList();
+                          }
+                      }
+                      """
+                ),
+                11
+            )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/489")
+    @Test
+    void doNotChangeWithImmutableListMethod() {
+        rewriteRun(
           version(
             //language=java
             java(
               """
                 import com.google.common.collect.ImmutableList;
-                
+
                 class A {
                     void test() {
-                        final List<Integer> list = ImmutableList.of(1, 2).stream().toList();
-                    }
-                }
-                """,
-              """
-                import java.util.List;
-                
-                class A {
-                    void test() {
-                        final List<Integer> list = List.of(1, 2).stream().toList();
+                        ImmutableList.of(1, 2).asList();
                     }
                 }
                 """
