@@ -28,45 +28,45 @@ class NoGuavaImmutableMapOfTest implements RewriteTest {
     @Override
     public void defaults(RecipeSpec spec) {
         spec
-          .recipe(new NoGuavaImmutableMapOf())
-          .parser(JavaParser.fromJavaVersion().classpath("guava"));
+            .recipe(new NoGuavaImmutableMapOf())
+            .parser(JavaParser.fromJavaVersion().classpath("guava"));
     }
 
     @Test
     void doNotChangeReturnsImmutableMap() {
         //language=java
         rewriteRun(
-          java(
-            """
-              import com.google.common.collect.ImmutableMap;
-              
-              class Test {
-                  ImmutableMap<String, String> getMap() {
-                      return ImmutableMap.of();
+            java(
+                """
+                  import com.google.common.collect.ImmutableMap;
+
+                  class Test {
+                      ImmutableMap<String, String> getMap() {
+                          return ImmutableMap.of();
+                      }
                   }
-              }
-              """
-          )
+                  """
+            )
         );
     }
 
     @Test
     void doNotChangeFieldAssignmentToImmutableMap() {
         rewriteRun(
-          //language=java
-          java(
-            """
-              import com.google.common.collect.ImmutableMap;
-              
-              class Test {
-                  ImmutableMap<String, String> m;
-              
-                  {
-                      this.m = ImmutableMap.of();
+            //language=java
+            java(
+                """
+                  import com.google.common.collect.ImmutableMap;
+
+                  class Test {
+                      ImmutableMap<String, String> m;
+
+                      {
+                          this.m = ImmutableMap.of();
+                      }
                   }
-              }
-              """
-          )
+                  """
+            )
         );
     }
 
@@ -74,19 +74,19 @@ class NoGuavaImmutableMapOfTest implements RewriteTest {
     void doNotChangeAssignsToImmutableMap() {
         //language=java
         rewriteRun(
-          java(
-            """
-              import com.google.common.collect.ImmutableMap;
-              
-              class Test {
-                  ImmutableMap<String, String> m;
-              
-                  void init() {
-                      m = ImmutableMap.of();
+            java(
+                """
+                  import com.google.common.collect.ImmutableMap;
+
+                  class Test {
+                      ImmutableMap<String, String> m;
+
+                      void init() {
+                          m = ImmutableMap.of();
+                      }
                   }
-              }
-              """
-          )
+                  """
+            )
         );
     }
 
@@ -94,27 +94,27 @@ class NoGuavaImmutableMapOfTest implements RewriteTest {
     void doNotChangeNewClass() {
         //language=java
         rewriteRun(
-          java(
-            """
-              import com.google.common.collect.ImmutableMap;
-              
-              public class A {
-                  ImmutableMap<String, String> immutableMap;
-                  public A(ImmutableMap<String, String> immutableMap) {
-                      this.immutableMap = immutableMap;
+            java(
+                """
+                  import com.google.common.collect.ImmutableMap;
+
+                  public class A {
+                      ImmutableMap<String, String> immutableMap;
+                      public A(ImmutableMap<String, String> immutableMap) {
+                          this.immutableMap = immutableMap;
+                      }
                   }
-              }
-              """
-          ),
-          java(
-            """
-              import com.google.common.collect.ImmutableMap;
-              
-              class Test {
-                  A a = new A(ImmutableMap.of());
-              }
-              """
-          )
+                  """
+            ),
+            java(
+                """
+                  import com.google.common.collect.ImmutableMap;
+
+                  class Test {
+                      A a = new A(ImmutableMap.of());
+                  }
+                  """
+            )
         );
     }
 
@@ -122,30 +122,30 @@ class NoGuavaImmutableMapOfTest implements RewriteTest {
     void doNotChangeMethodInvocation() {
         //language=java
         rewriteRun(
-          java(
-            """
-              import com.google.common.collect.ImmutableMap;
-              
-              public class A {
-                  ImmutableMap<String, String> immutableMap;
-                  public void method(ImmutableMap<String, String> immutableMap) {
-                      this.immutableMap = immutableMap;
+            java(
+                """
+                  import com.google.common.collect.ImmutableMap;
+
+                  public class A {
+                      ImmutableMap<String, String> immutableMap;
+                      public void method(ImmutableMap<String, String> immutableMap) {
+                          this.immutableMap = immutableMap;
+                      }
                   }
-              }
-              """
-          ),
-          java(
-            """
-              import com.google.common.collect.ImmutableMap;
-              
-              class Test {
-                  void method() {
-                      A a = new A();
-                      a.method(ImmutableMap.of());
+                  """
+            ),
+            java(
+                """
+                  import com.google.common.collect.ImmutableMap;
+
+                  class Test {
+                      void method() {
+                          A a = new A();
+                          a.method(ImmutableMap.of());
+                      }
                   }
-              }
-              """
-          )
+                  """
+            )
         );
     }
 
@@ -153,26 +153,26 @@ class NoGuavaImmutableMapOfTest implements RewriteTest {
     void replaceArguments() {
         //language=java
         rewriteRun(
-          version(
-            java(
-              """
-                import java.util.Map;
-                import com.google.common.collect.ImmutableMap;
-                
-                class Test {
-                    Map<String, String> m = ImmutableMap.of("A", "B", "C", "D");
-                }
-                """,
-              """
-                import java.util.Map;
-                
-                class Test {
-                    Map<String, String> m = Map.of("A", "B", "C", "D");
-                }
-                """
-            ),
-            9
-          )
+            version(
+                java(
+                    """
+                      import java.util.Map;
+                      import com.google.common.collect.ImmutableMap;
+
+                      class Test {
+                          Map<String, String> m = ImmutableMap.of("A", "B", "C", "D");
+                      }
+                      """,
+                    """
+                      import java.util.Map;
+
+                      class Test {
+                          Map<String, String> m = Map.of("A", "B", "C", "D");
+                      }
+                      """
+                ),
+                9
+            )
         );
     }
 
@@ -180,32 +180,32 @@ class NoGuavaImmutableMapOfTest implements RewriteTest {
     void fieldAssignmentToMap() {
         //language=java
         rewriteRun(
-          version(
-            java(
-              """
-                import java.util.Map;
-                import com.google.common.collect.ImmutableMap;
-                
-                class Test {
-                    Map<String, String> m;
-                    {
-                        this.m = ImmutableMap.of();
-                    }
-                }
-                """,
-              """
-                import java.util.Map;
-                
-                class Test {
-                    Map<String, String> m;
-                    {
-                        this.m = Map.of();
-                    }
-                }
-                """
-            ),
-            9
-          )
+            version(
+                java(
+                    """
+                      import java.util.Map;
+                      import com.google.common.collect.ImmutableMap;
+
+                      class Test {
+                          Map<String, String> m;
+                          {
+                              this.m = ImmutableMap.of();
+                          }
+                      }
+                      """,
+                    """
+                      import java.util.Map;
+
+                      class Test {
+                          Map<String, String> m;
+                          {
+                              this.m = Map.of();
+                          }
+                      }
+                      """
+                ),
+                9
+            )
         );
     }
 
@@ -213,26 +213,26 @@ class NoGuavaImmutableMapOfTest implements RewriteTest {
     void assignmentToMap() {
         //language=java
         rewriteRun(
-          version(
-            java(
-              """
-                import java.util.Map;
-                import com.google.common.collect.ImmutableMap;
-                
-                class Test {
-                    Map<String, String> m = ImmutableMap.of();
-                }
-                """,
-              """
-                import java.util.Map;
-                
-                class Test {
-                    Map<String, String> m = Map.of();
-                }
-                """
-            ),
-            9
-          )
+            version(
+                java(
+                    """
+                      import java.util.Map;
+                      import com.google.common.collect.ImmutableMap;
+
+                      class Test {
+                          Map<String, String> m = ImmutableMap.of();
+                      }
+                      """,
+                    """
+                      import java.util.Map;
+
+                      class Test {
+                          Map<String, String> m = Map.of();
+                      }
+                      """
+                ),
+                9
+            )
         );
     }
 
@@ -240,30 +240,30 @@ class NoGuavaImmutableMapOfTest implements RewriteTest {
     void returnsMap() {
         //language=java
         rewriteRun(
-          version(
-            java(
-              """
-                import java.util.Map;
-                import com.google.common.collect.ImmutableMap;
-                
-                class Test {
-                    Map<String, String> map() {
-                        return ImmutableMap.of();
-                    }
-                }
-                """,
-              """
-                import java.util.Map;
-                
-                class Test {
-                    Map<String, String> map() {
-                        return Map.of();
-                    }
-                }
-                """
-            ),
-            9
-          )
+            version(
+                java(
+                    """
+                      import java.util.Map;
+                      import com.google.common.collect.ImmutableMap;
+
+                      class Test {
+                          Map<String, String> map() {
+                              return ImmutableMap.of();
+                          }
+                      }
+                      """,
+                    """
+                      import java.util.Map;
+
+                      class Test {
+                          Map<String, String> map() {
+                              return Map.of();
+                          }
+                      }
+                      """
+                ),
+                9
+            )
         );
     }
 
@@ -272,30 +272,30 @@ class NoGuavaImmutableMapOfTest implements RewriteTest {
     void mapOfInts() {
         //language=java
         rewriteRun(
-          version(
-            java(
-              """
-                import java.util.Map;
-                import com.google.common.collect.ImmutableMap;
-                
-                class Test {
-                    Map<Integer, Integer> map() {
-                        return ImmutableMap.of(1, 1, 2, 2, 3, 3);
-                    }
-                }
-                """,
-              """
-                import java.util.Map;
-                
-                class Test {
-                    Map<Integer, Integer> map() {
-                        return Map.of(1, 1, 2, 2, 3, 3);
-                    }
-                }
-                """
-            ),
-            9
-          )
+            version(
+                java(
+                    """
+                      import java.util.Map;
+                      import com.google.common.collect.ImmutableMap;
+
+                      class Test {
+                          Map<Integer, Integer> map() {
+                              return ImmutableMap.of(1, 1, 2, 2, 3, 3);
+                          }
+                      }
+                      """,
+                    """
+                      import java.util.Map;
+
+                      class Test {
+                          Map<Integer, Integer> map() {
+                              return Map.of(1, 1, 2, 2, 3, 3);
+                          }
+                      }
+                      """
+                ),
+                9
+            )
         );
     }
 
@@ -303,37 +303,37 @@ class NoGuavaImmutableMapOfTest implements RewriteTest {
     void newClassWithMapArgument() {
         //language=java
         rewriteRun(
-          java(
-            """
-              import java.util.Map;
-              
-              public class A {
-                  Map<String, String> map;
-                  public A(Map<String, String> map) {
-                      this.map = map;
-                  }
-              }
-              """
-          ),
-          version(
             java(
-              """
-                import com.google.common.collect.ImmutableMap;
-                
-                class Test {
-                    A a = new A(ImmutableMap.of());
-                }
-                """,
-              """
-                import java.util.Map;
-                
-                class Test {
-                    A a = new A(Map.of());
-                }
                 """
+                  import java.util.Map;
+
+                  public class A {
+                      Map<String, String> map;
+                      public A(Map<String, String> map) {
+                          this.map = map;
+                      }
+                  }
+                  """
             ),
-            9
-          )
+            version(
+                java(
+                    """
+                      import com.google.common.collect.ImmutableMap;
+
+                      class Test {
+                          A a = new A(ImmutableMap.of());
+                      }
+                      """,
+                    """
+                      import java.util.Map;
+
+                      class Test {
+                          A a = new A(Map.of());
+                      }
+                      """
+                ),
+                9
+            )
         );
     }
 
@@ -341,43 +341,43 @@ class NoGuavaImmutableMapOfTest implements RewriteTest {
     void methodInvocationWithMapArgument() {
         //language=java
         rewriteRun(
-          java(
-            """
-              import java.util.Map;
-              
-              public class A {
-                  Map<String, String> map;
-                  public void method(Map<String, String> map) {
-                      this.map = map;
-                  }
-              }
-              """
-          ),
-          version(
             java(
-              """
-                import com.google.common.collect.ImmutableMap;
-                
-                class Test {
-                    void method() {
-                        A a = new A();
-                        a.method(ImmutableMap.of());
-                    }
-                }
-                """,
-              """
-                import java.util.Map;
-                
-                class Test {
-                    void method() {
-                        A a = new A();
-                        a.method(Map.of());
-                    }
-                }
                 """
+                  import java.util.Map;
+
+                  public class A {
+                      Map<String, String> map;
+                      public void method(Map<String, String> map) {
+                          this.map = map;
+                      }
+                  }
+                  """
             ),
-            9
-          )
+            version(
+                java(
+                    """
+                      import com.google.common.collect.ImmutableMap;
+
+                      class Test {
+                          void method() {
+                              A a = new A();
+                              a.method(ImmutableMap.of());
+                          }
+                      }
+                      """,
+                    """
+                      import java.util.Map;
+
+                      class Test {
+                          void method() {
+                              A a = new A();
+                              a.method(Map.of());
+                          }
+                      }
+                      """
+                ),
+                9
+            )
         );
     }
 
@@ -385,38 +385,38 @@ class NoGuavaImmutableMapOfTest implements RewriteTest {
     void variableIsMap() {
         //language=java
         rewriteRun(
-          version(
-            java(
-              """
-                import java.util.HashMap;
-                import java.util.Map;
-                import com.google.common.collect.ImmutableMap;
-                
-                class Test {
-                    Map<Integer, Map<String, String>> map = new HashMap<>();
-                    void setMap(String value) {
-                        for (int i = 0; i < 10; i++) {
-                            map.getOrDefault(i, ImmutableMap.of());
-                        }
-                    }
-                }
-                """,
-              """
-                import java.util.HashMap;
-                import java.util.Map;
-                
-                class Test {
-                    Map<Integer, Map<String, String>> map = new HashMap<>();
-                    void setMap(String value) {
-                        for (int i = 0; i < 10; i++) {
-                            map.getOrDefault(i, Map.of());
-                        }
-                    }
-                }
-                """
-            ),
-            9
-          )
+            version(
+                java(
+                    """
+                      import java.util.HashMap;
+                      import java.util.Map;
+                      import com.google.common.collect.ImmutableMap;
+
+                      class Test {
+                          Map<Integer, Map<String, String>> map = new HashMap<>();
+                          void setMap(String value) {
+                              for (int i = 0; i < 10; i++) {
+                                  map.getOrDefault(i, ImmutableMap.of());
+                              }
+                          }
+                      }
+                      """,
+                    """
+                      import java.util.HashMap;
+                      import java.util.Map;
+
+                      class Test {
+                          Map<Integer, Map<String, String>> map = new HashMap<>();
+                          void setMap(String value) {
+                              for (int i = 0; i < 10; i++) {
+                                  map.getOrDefault(i, Map.of());
+                              }
+                          }
+                      }
+                      """
+                ),
+                9
+            )
         );
     }
 
@@ -425,29 +425,29 @@ class NoGuavaImmutableMapOfTest implements RewriteTest {
     void insideAnonymousArrayInitializer() {
         //language=java
         rewriteRun(
-          version(
-            java(
-              """
-                import com.google.common.collect.ImmutableMap;
-                
-                class A {
-                    Object[] o = new Object[] {
-                            ImmutableMap.of(1, 1, 2, 2, 3, 3)
-                    };
-                }
-                """,
-              """
-                import java.util.Map;
-                
-                class A {
-                    Object[] o = new Object[] {
-                            Map.of(1, 1, 2, 2, 3, 3)
-                    };
-                }
-                """
-            ),
-            11
-          )
+            version(
+                java(
+                    """
+                      import com.google.common.collect.ImmutableMap;
+
+                      class A {
+                          Object[] o = new Object[] {
+                                  ImmutableMap.of(1, 1, 2, 2, 3, 3)
+                          };
+                      }
+                      """,
+                    """
+                      import java.util.Map;
+
+                      class A {
+                          Object[] o = new Object[] {
+                                  Map.of(1, 1, 2, 2, 3, 3)
+                          };
+                      }
+                      """
+                ),
+                11
+            )
         );
     }
 
@@ -456,138 +456,67 @@ class NoGuavaImmutableMapOfTest implements RewriteTest {
     void assignToMoreGeneralType() {
         //language=java
         rewriteRun(
-          version(
-            java(
-              """
-                import com.google.common.collect.ImmutableMap;
-                
-                class A {
-                    Object o = ImmutableMap.of(1, 1, 2, 2, 3, 3);
-                }
-                """,
-              """
-                import java.util.Map;
-                
-                class A {
-                    Object o = Map.of(1, 1, 2, 2, 3, 3);
-                }
-                """
-            ),
-            11
-          )
+            version(
+                java(
+                    """
+                      import com.google.common.collect.ImmutableMap;
+
+                      class A {
+                          Object o = ImmutableMap.of(1, 1, 2, 2, 3, 3);
+                      }
+                      """,
+                    """
+                      import java.util.Map;
+
+                      class A {
+                          Object o = Map.of(1, 1, 2, 2, 3, 3);
+                      }
+                      """
+                ),
+                11
+            )
         );
     }
 
     @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/256")
     @Test
-    void doChangeNestedMaps() {
+    void doNotChangeNestedMaps() {
         //language=java
         rewriteRun(
-          version(
-            java(
-              """
-                import com.google.common.collect.ImmutableMap;
-                import java.util.Map;
-                
-                class A {
-                    Object o = Map.of(1, ImmutableMap.of(2, 3));
-                }
-                """,
-              """
-                import java.util.Map;
-                
-                class A {
-                    Object o = Map.of(1, Map.of(2, 3));
-                }
-                """
-            ),
-            11
-          )
-        );
-    }
+            version(
+                java(
+                    """
+                      import com.google.common.collect.ImmutableMap;
+                      import java.util.Map;
 
-    @Test
-    void doChangeNestedMaps2() {
-        //language=java
-        rewriteRun(
-          version(
-            java(
-              """
-                import com.google.common.collect.ImmutableMap;
-                
-                class A {
-                    Object o = ImmutableMap.of(1, ImmutableMap.of(2, 3));
-                }
-                """,
-              """
-                import java.util.Map;
-                
-                class A {
-                    Object o = Map.of(1, Map.of(2, 3));
-                }
-                """
-            ),
-            11
-          )
+                      class A {
+                          Object o = Map.of(1, ImmutableMap.of(2, 3));
+                      }
+                      """
+                ),
+                11
+            )
         );
     }
 
     @Issue("https://github.com/openrewrite/rewrite-migrate-java/issues/256")
     @Test
-    void doChangeAssignToImmutableMap() {
+    void doNotChangeAssignToImmutableMap() {
         //language=java
         rewriteRun(
-          version(
-            java(
-              """
-                import java.util.Map;
-                import com.google.common.collect.ImmutableMap;
-                
-                class Test {
-                    ImmutableMap<String, String> m = ImmutableMap.of();
-                }
-                """,
-              """
-                import java.util.Map;
-                
-                class Test {
-                    Map<String, String> m = Map.of();
-                }
-                """
-            ),
-            9
-          )
+            version(
+                java(
+                    """
+                      import java.util.Map;
+                      import com.google.common.collect.ImmutableMap;
+
+                      class Test {
+                          ImmutableMap<String, String> m = ImmutableMap.of();
+                      }
+                      """
+                ),
+                9
+            )
         );
     }
-
-    @Test
-    void doChangeNestedAssignReturnType() {
-        rewriteRun(
-          version(
-            //language=java
-            java(
-              """
-                import com.google.common.collect.ImmutableMap;
-                
-                class A {
-                    public void getMap() {
-                        ImmutableMap<String, ImmutableMap<String, String>> s =  ImmutableMap.of("key", ImmutableMap.of("value1", "value2"));
-                    }
-                }
-                """,
-              """
-                import java.util.Map;
-                
-                class A {
-                    public void getMap() {
-                        Map<String, Map<String, String>> s =  Map.of("key", Map.of("value1", "value2"));
-                    }
-                }
-                """
-            ),
-            9
-          )
-        );
-    }
-
 }
